Fixed selectmenu scrollbar

--- a/src/assets/scss/sections/generic-elements.scss
+++ b/src/assets/scss/sections/generic-elements.scss
@@ -333,6 +333,72 @@ body.lock{
 			height: 100%;
 			z-index: 1;
 		}
+		&:has(input:focus){
+			.filter-search__suggestions{
+				pointer-events:auto;
+				opacity: 1;
+			}
+		}
+		&__suggestions{
+			transition: all 0.2s;
+			opacity: 0;
+			pointer-events: none;
+			border-radius: 4px;
+			border: 1px solid var(--Main-Green, $darkGreen);
+			background: var(--White, #FFF);
+			box-shadow: 4px 4px 15px 0px rgba(0, 0, 0, 0.25);
+			position: absolute;
+			top: calc(100% + 25px);
+			left: 0;
+			right: 0;
+			z-index: 100;
+			padding: 10px 0;
+			padding-right: 10px;
+		}
+		&__suggestion-wrapper {
+			
+			padding: 10px;
+			
+			max-height: 200px;
+			overflow: auto;
+			width: 100%;
+			height: 100%;
+			&::-webkit-scrollbar {
+				width: 4px;
+			}
+
+			/* Track */
+			&::-webkit-scrollbar-track {
+				background-color: #D9D9D9;
+				border-left: 1px solid transparent;
+				border-right: 1px solid transparent;
+				background-clip: padding-box;
+			}
+
+			/* Handle */
+			&::-webkit-scrollbar-thumb {
+				border-radius: 3px;
+				background-color: $darkGreen;
+				
+			}
+
+			/* Handle on hover */
+			&::-webkit-scrollbar-thumb:hover {
+				cursor: pointer;
+				/*redifine styles like background and border radius*/
+			}
+
+		}
+		&__suggestion {
+			border-bottom: 1px solid #D9D9D9;
+			padding: 5px 10px;
+			cursor: pointer;
+			transition: all 0.1s;
+			&:hover{
+				background: $darkGreen;
+				color: #fff;
+			}
+		}
 	}
 	&-tag{
 		background: $white;
@@ -594,7 +660,7 @@ body.lock{
 	&__elem {
 		&--simple{
 			border-radius: 50%;
-			background: #1A8400;
+			background: $darkGreen;
 			height: 20px;
 			width: 20px;
 			transform: translateX(-10px);
